--- a/jobkarleapp/templates/FresherRigister.html
+++ b/jobkarleapp/templates/FresherRigister.html
@@ -50,7 +50,7 @@
     .bootimg{
       }  
 </style>
-<section style="position: relative; top:10px;">
+<section style="position: relative; top:80px;">
   <div class="container card col-sm-9 my-5 py-5 z-depth-1">
 
 
@@ -61,7 +61,7 @@
       <div class="row">
   
         <!--Grid column-->
-        <div class="col-md-6 mb-4 mb-md-0">
+        <div class="col-xl-6 mb-4 mb-md-0">
   
           <h3 class="font-weight-bold">SVCE Application Blocks</h3>
   
@@ -89,10 +89,8 @@
         <!--Grid column-->
   
         <!--Grid column-->
-        <div class="col-md-5 mb-4 mb-md-0">
-         
-          <img style="position: relative; left:300px;" class=" card p-2 bootimg" src="{% static 'testpic.jpg' %}" width="" height="550"  class="img-fluid" alt="">
-  
+        <div class="col-xl-6 mb-4 mb-md-0">
+          <img class="card p-2 bootimg m-auto" src="{% static 'testpic.jpg' %}" width="" height="550"  class="img-fluid" alt="">
         </div>
         <!--Grid column-->
   
