--- a/jobkarleapp/templates/companybase.html
+++ b/jobkarleapp/templates/companybase.html
@@ -7,6 +7,7 @@
     <script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'animate.css' %}">
     <link rel="stylesheet" href="{% static 'static_css/companybase.css' %}">
+    <link rel="stylesheet" href="{% static 'static_css/media-quary.css' %}">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Bootstrap core CSS -->
