--- a/jobkarleapp/templates/companys-img.html
+++ b/jobkarleapp/templates/companys-img.html
@@ -4,166 +4,198 @@
         box-shadow: 10px;
         padding: 5px;
     }
+
 </style>
 
-<div class=" logo-imgs">
-     <h3 class="font-weight-bold text-center dark-grey-text pb-2">Our Partners</h3>
-    <div class="row ">
-        <div class="col-sm-1">
-        <img  class=" card p-1 m-2" src="{% static 'accenture.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static '1.jpeg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static '0.jpeg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static '9B4BF65F-12AA-4BAD-9577-728930EA7356.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'amazon-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'dell.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'dxc.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'google-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'hcl.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'ibm-logo-2.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'hexa.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'FIS_company_Fidelity_National_Information_Services_Inc._Corporate_Logo.svg_.png' %}" width="100" id="img-companys" >
-        </div>
+<div class="logo-imgs">
+     <h3 class="font-weight-bold text-center dark-grey-text pb-2 m-auto">Our Partners</h3>
+    <div class="row">
+            <div class="col-xs-6 m-auto">
+                    <div class="row">
+                                <div class="p-2">
+                                <img  class=" card" src="{% static 'accenture.png' %}" width="100" id="img-companys" >
+                                </div>
+                                <div class="p-2">
+                                        <img  class=" card" src="{% static '1.jpeg' %}" width="100" id="img-companys" >
+                                </div>
+                                <div class="p-2">
+                                        <img  class=" card" src="{% static '0.jpeg' %}" width="100" id="img-companys" >
+                                </div>
+                                <div class="p-2">
+                                        <img  class=" card" src="{% static '9B4BF65F-12AA-4BAD-9577-728930EA7356.png' %}" width="100" id="img-companys" >
+                                </div>
+                                <div class="p-2">
+                                        <img  class=" card" src="{% static 'amazon-logo.png' %}" width="100" id="img-companys" >
+                                </div>
+                                <div class="p-2">
+                                        <img  class=" card" src="{% static 'dell.png' %}" width="100" id="img-companys" >
+                                </div>
+                    </div>
+                        
+            </div>
+       <div class="col-xs-6 m-auto">
+               <div class="row">
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'dxc.png' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'google-logo.png' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'hcl.png' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'ibm-logo-2.png' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'hexa.jpg' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'FIS_company_Fidelity_National_Information_Services_Inc._Corporate_Logo.svg_.png' %}" width="100" id="img-companys" >
+                </div>
+               </div>
+       </div>
+        
         
     </div>
     <div class="row">
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'infosys.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'invesco.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'ntt.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-        <img  class=" card p-1 m-2" src="{% static 'oracle.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'Polaris-Logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'samsung-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'sasken.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'sony.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'tcs.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'tech-m.jpeg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'logica-min.jpg' %}" width="100" id="img-companys" >
-        </div>
-        
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'mu-sigma-696x365.gif' %}" width="100" id="img-companys" >
-        </div>
-        
+            <div class="col-xs-6 m-auto">
+                    <div class="row">
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'infosys.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'invesco.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'ntt.jpg' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                        <img  class=" card" src="{% static 'oracle.jpg' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'Polaris-Logo.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'samsung-logo.png' %}" width="100" id="img-companys" >
+                        </div>
+                    </div>
+            </div>
+            <div class="col-xs-6 m-auto">
+                    <div class="row">
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'sasken.jpg' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'sony.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'tcs.jpg' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'tech-m.jpeg' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'logica-min.jpg' %}" width="100" id="img-companys" >
+                        </div>
+                        
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'mu-sigma-696x365.gif' %}" width="100" id="img-companys" >
+                        </div>
+                    </div>
+            </div>
     </div>
     <div class="row">
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'wipro.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'Zoho_logo-700x241.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'walmart.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-        <img  class=" card p-1 m-2" src="{% static 'world-health.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'Untitled-3.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'state-grid.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'ofs-logo.gif' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'nokia.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'jpmorgan.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'apple-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'mckesson.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'coca-cola-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        
+            <div class="col-xs-6 m-auto">
+                    <div class="row">
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'wipro.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'Zoho_logo-700x241.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'walmart.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'world-health.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'Untitled-3.jpg' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'state-grid.png' %}" width="100" id="img-companys" >
+                        </div>
+                    </div>
+            </div>
+            <div class="col-xs-6 m-auto">
+                    <div class="row">
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'ofs-logo.gif' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'nokia.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'jpmorgan.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'apple-logo.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'mckesson.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'coca-cola-logo.png' %}" width="100" id="img-companys" >
+                        </div>
+                    </div>
+            </div> 
     </div>
     <div class="row">
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'bank-of america.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'facebook-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'flipkart-logo-696x198.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-        <img  class=" card p-1 m-2" src="{% static 'capgemini.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'cognizant-696x212.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'mphasis-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'intel-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'huawei-logo-446x420.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'deloitte.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'microsoft-logo.png' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'mindtree-logo-696x365.jpg' %}" width="100" id="img-companys" >
-        </div>
-        <div class="col-sm-1">
-                <img  class=" card p-1 m-2" src="{% static 'cisco-logo.png' %}" width="100" id="img-companys" >
-        </div>
-
+            <div class="col-xs-6 m-auto">
+                    <div class="row">
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'bank-of america.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'facebook-logo.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'flipkart-logo-696x198.jpg' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                        <img  class=" card" src="{% static 'capgemini.jpg' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'cognizant-696x212.png' %}" width="100" id="img-companys" >
+                        </div>
+                        <div class="p-2">
+                                <img  class=" card" src="{% static 'mphasis-logo.png' %}" width="100" id="img-companys" >
+                        </div>
+                    </div>
+            </div>
+       <div class="col-xs-6 m-auto">
+               <div class="row">
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'intel-logo.png' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'huawei-logo-446x420.png' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'deloitte.png' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'microsoft-logo.png' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'mindtree-logo-696x365.jpg' %}" width="100" id="img-companys" >
+                </div>
+                <div class="p-2">
+                        <img  class=" card" src="{% static 'cisco-logo.png' %}" width="100" id="img-companys" >
+                </div>
+               </div>
+       </div>
     </div>
 </div>
 <style>
